Joint.GetLimitPoint() is now of type Vector3?. The return is null if the internal functions NxJoint::getLimitPoint() returns false
Project and all source code is avaliable online at codeplex - http://www.codeplex.com/physxdotnet
Fluid stream properties now set the unmanaged versions they wrap
Fixed SceneDescription.Limits.Set from crashing
Added PhysXException and PhysXInitializationException. Replaced all Exception/ApplicationException with the new ones.
Added flag wrappers in Core, Actor and Fluid classes.
Replaced all custom ReadOnly* collections with System.Collection.ObjectModel.ReadOnlyCollection<T>.
Removed specialized collections like, e.g. Scene.ActorCollection.
Modified RuntimeFileChecker to follow DLL search order and throw DllNotFoundException. Also fixed bug in CheckFile.
Changed precompiled header settings. That gave compiler a nice boost.
Moved all PhysX includes from individual headers to stdafx.h.
Removed DescriptorValidity. If the user wishes to debug IsValid() calls, they can aquire the source code and step into.

[0.9.1.0 - 2008-06-28]
Fixed WheelShape.GetContactData()
WheelShape.GetContactData() returns an empty struct when no contact occurs rather than undefined memory
Added WheelContactData.ContactPosition
Added comments to WheelContactData

[0.9.0.0 - 2008-06-27]
Changed the version number to better reflect the changes

[0.8.11.0 - 2008-06-27]
Added Core.InternalVersion and Core.SDKVersion
Removed NumberOf-Actors, Cloths, DynamicShapes, StaticShapes
Added Scene.Flags
Small speed up of ActiveTransform.FromUnmanagedPointer
Renamed stillDesign to StillDesign to better conform with .Net naming guidelines
Added Scene.GetActiveTransforms
Added ParticleIdData
Added ParticleUpdateData
Added Fluid.UpdateParticles()
Added FluidPacketData
Added Fluid.AddParticles, Fluid.RemoveAllParticles, Fluid.ParticleWriteData, Fluid.ParticleDeletionIdWriteData, Fluid.ParticleCreationIdWriteData, Fluid.UpdateParticles, Fluid.FluidPacketData